--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -3,10 +3,9 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
-<title>ShowDoc</title>
+<title>文档</title>
  <link rel="stylesheet" href="__PUBLIC__/bootstrap/css/bootstrap.min.css">
 
- <link rel="stylesheet" href="__PUBLIC__/css/jquery.fullPage.css">
  <style>
 .section { text-align: center; font: 30px "Microsoft Yahei"; color: #fff;}
 .header{
@@ -20,7 +19,6 @@
     margin-bottom: 0;
 }
 .header a {
-    color: white;
     font-size: 12px;
     font-weight: bold;
 }
@@ -40,91 +38,6 @@
     </div>  
   </div>
 
-<div id="dowebok">
-    <div class="section">
-        <img src="__PUBLIC__/logo/b_64.png" alt="">
-        <h1>{$Think.lang.section_title1}</h1>
-        <br>
-        <p>{$Think.lang.section_description1}</p>
-        <br>
-        <p>
-            <a class="btn   btn-large " href="{$demo_url}" target="_blank">{$Think.lang.demo}</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="btn  btn-large" href="{$help_url}" target="_blank" >{$Think.lang.help}&nbsp;</i></a>
-        </p>
-    </div>
-    <div class="section">
-        <h1>{$Think.lang.section_title2}</h1>
-        <br>
-        <p> {$Think.lang.section_description2}</p>
-        <br>
-    </div>
-    <div class="section">
-        <h1>{$Think.lang.section_title3}</h1>
-        <br>
-        <p>{$Think.lang.section_description3}</p>
-        <br>
-    </div>
-    <div class="section">
-        <h1>{$Think.lang.section_title4}</h1>
-        <br>
-        <p>{$Think.lang.section_description4}</p>
-        <br>
-    </div>
-
-    <div class="section">
-        <h1>{$Think.lang.section_title5}</h1>
-        <br>
-        <p>{$Think.lang.section_description5}</p>
-        <br>
-    </div>
-
-    <div class="section">
-        <h1>{$Think.lang.section_title6}</h1>
-        <br>
-        <p>{$Think.lang.section_description6}</p>
-        <br>
-    </div>
-
-    <div class="section">
-        <h1>{$Think.lang.section_title7}</h1>
-        <br>
-        <p>{$Think.lang.section_description7}</p>
-        <br>
-    </div>
-    <div class="section">
-        <h1></h1>
-        <br>
-        <p>{$Think.lang.section_description8}</p>
-        <br>
-        <p>
-            <a class="btn   btn-large " href="{:U('Home/User/register')}">{$Think.lang.section_title8}</a>
-        </p>
-    </div>
-</div>
  <include file="Common/footer" />
-<script src="__PUBLIC__/js/jquery.fullPage.min.js"></script>
-<script>
-$(function(){
-    $('#dowebok').fullpage({
-        sectionsColor : ['#1bbc9b', '#4BBFC3', '#2C606A', '#f90','#7CBD9D','#A77DC2','#85CE92','#1bbc9b'],
-        navigation:true,
-    });
-
-    $(window).resize(function(){
-        autoScrolling();
-    });
-
-    function autoScrolling(){
-        var $ww = $(window).width();
-        if($ww < 1024){
-            $.fn.fullpage.setAutoScrolling(false);
-        } else {
-            $.fn.fullpage.setAutoScrolling(true);
-        }
-    }
-
-    autoScrolling();
-});
-</script>
 </body>
 </html>
